position and flow lection

--- a/20191008_git/index.html
+++ b/20191008_git/index.html
@@ -9,5 +9,12 @@
 <body>
     <h1>GIT</h1>
     <p>Система контроля версий.</p>
+    <ul>
+        <li>Репозиторий(репа) - хранилище ваших даных(текущий проект)</li>
+        <li>Коммит - точка сохранения(восстановления). По коммитам можно перемещаться и видеть ваш проект в разных стадиях работы</li>
+        <li>Пуш - действие загрузки данных на сервер. (пушануть на гитхаб)</li>
+        <li>Клон - действие создания копии с существующего репозитория на ваш компьютер с помощью адреса (https://github.com/so2niko/step-webautu19.git)(склонировать репу)</li>
+        <li>Ветка(Брэнч) - отдельный экземпляр вашей работы. Возможность без ущерба к основному коду работать и экспериментировать.</li>
+   </ul>
 </body>
 </html>
