--- a/20200114_objects/index.html
+++ b/20200114_objects/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     
-    <script src="app/main.js"></script>
+    <!-- <script src="app/main.js"></script> -->
+    <script src="app/generate.js"></script>
 </body>
 </html>
