--- a/20200317_dom_manipulations/index.html
+++ b/20200317_dom_manipulations/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
+    <h3>Задание:</h3>
+    <p>Убрать кнопку. Сделать генерация кругов автоматически. Каждые 5 секунд.</p>
+    <p>Ширина и высота круга случайна. В пределах от 50px до 150px</p>
     <nav>
         <button class="btn-add-circle">Add</button>
     </nav>
