--- a/20200319_forms/index.html
+++ b/20200319_forms/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style/main.css">
     <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="./icons/icon-192x192.png" type="image/x-icon">
 </head>
 <body>
     
