filter, tabs, render categories

--- a/blog_project/index.html
+++ b/blog_project/index.html
@@ -12,6 +12,17 @@
         <input class="form-control mr-sm-2 inp-search" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0">Search</button>
       </form>
+      <div class="tabs-categories-wrapper">
+        <a href="#" class="m-3 tabs-categories" data-category="all">All</a>
+        <a href="#" class="m-3 tabs-categories" data-category="articles">Articles</a>
+        <a href="#" class="m-3 tabs-categories" data-category="feedbacks">Feedbacks</a>
+      </div>
+      
+      <div class="dates">
+        <select class="select-dates">
+          <!-- dates options -->
+        </select>
+      </div>
       <div class="authors">
         <!-- List of authors -->
       </div>
