--- a/20200519-repeat_themes/index.html
+++ b/20200519-repeat_themes/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="w-200 pos-fix d-none ctx-menu">
+    <div class="ctx-menu-container"></div>
+    <!-- <div class="w-200 pos-fix ctx-menu">
         <ul class="list-group user-select-none">
             <li class="list-group-item p-1 pl-2"><i class="fas fa-folder-plus"></i> Создать папку</li>
             <li class="list-group-item p-1 pl-2"><i class="fas fa-file-upload"></i> Загрузка файлов</li>
@@ -19,7 +20,7 @@
             <li class="list-group-item p-1 pl-2"><i class="fas fa-file-powerpoint"></i> Google Презентации</li>
             <li class="list-group-item p-1 pl-2">Ещё</li>
         </ul>
-    </div>
+    </div> -->
     <script src="app/main.js" type="module"></script>
 </body>
 </html>
