--- a/20200519-repeat_themes/index.html
+++ b/20200519-repeat_themes/index.html
@@ -10,17 +10,43 @@
 </head>
 <body>
     <div class="ctx-menu-container"></div>
-    <!-- <div class="w-200 pos-fix ctx-menu">
-        <ul class="list-group user-select-none">
-            <li class="list-group-item p-1 pl-2"><i class="fas fa-folder-plus"></i> Создать папку</li>
-            <li class="list-group-item p-1 pl-2"><i class="fas fa-file-upload"></i> Загрузка файлов</li>
-            <li class="list-group-item p-1 pl-2"><i class="fas fa-folder-open"></i> Загрузить папку</li>
-            <li class="list-group-item p-1 pl-2"><i class="fas fa-file-word"></i> Google Документы</li>
-            <li class="list-group-item p-1 pl-2"><i class="fas fa-file-excel"></i> Google Таблицы</li>
-            <li class="list-group-item p-1 pl-2"><i class="fas fa-file-powerpoint"></i> Google Презентации</li>
-            <li class="list-group-item p-1 pl-2">Ещё</li>
-        </ul>
-    </div> -->
+    <div class="feedback-form-container container w-50">
+        <h5 class="msg-thanks text-success text-center d-none">Thanks for your opinion</h5>
+        <form class="feedback-form">
+            <div class="row">
+                <div class="col pt-3">
+                    <input 
+                        type="text" 
+                        class="form-control" 
+                        id="inpName" 
+                        aria-describedby="nameHelp"
+                        placeholder="Name"
+                        autofocus
+                        autocomplete="name"
+                        required>
+                </div>
+                <div class="col pt-3">
+                    <input 
+                        type="email" 
+                        class="form-control" 
+                        id="inpEmail" 
+                        aria-describedby="emailHelp"
+                        placeholder="name@email.com"
+                        autocomplete="email"
+                        required>
+                </div>
+            </div>
+            <div class="form-group pt-2">
+                <textarea 
+                    class="form-control" 
+                    id="inpOpinion" 
+                    rows="3"
+                    placeholder="Your opinion"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+    </div>
     <script src="app/main.js" type="module"></script>
+    <script src="app/form.js" type="module"></script>
 </body>
 </html>
