style: add flexbox for body

--- a/20200723_shop_cart/index.html
+++ b/20200723_shop_cart/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-    <div class="cart_logo">Cart <span class="cart_count"></span></div>
-    <div class="product_list"></div>
+    <header>
+        <h3>header</h3>
+        <div class="cart_logo">Cart <span class="cart_count"></span></div>
+    </header>
+    <main>
+        <div class="product_list"></div>
+    </main>
+    <footer>
+        <h4>footer</h4>
+    </footer>
     <script src="app/main.js" type="module"></script>
 </body>
 </html>
