feat: add render cart modal(with working render)

--- a/20200723_shop_cart/index.html
+++ b/20200723_shop_cart/index.html
@@ -17,40 +17,8 @@
     <footer>
         <h4>footer</h4>
     </footer>
-    <div class="modal">
-        <div class="modal_cart">
-            <button class="btn_close">X</button>
-            <table>
-                <tr>
-                    <td>1</td>
-                    <td>Гиря</td>
-                    <td>400</td>
-                    <td><input type="number" min="0" class="inp_product_cart"></td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Гантеля</td>
-                    <td>400</td>
-                    <td><input type="number" min="0" class="inp_product_cart"></td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Гиря</td>
-                    <td>400</td>
-                    <td><input type="number" min="0" class="inp_product_cart"></td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>Гиря</td>
-                    <td>400</td>
-                    <td><input type="number" min="0" class="inp_product_cart"></td>
-                </tr>
-            </table>
-            <div class="sum">SUM: <span class="modal_cart_sum">1200</span></div>
-            <div class="cart_buttons">
-                <button>Clear</button><button>Buy</button>
-            </div>
-        </div>
+    <div class="modal close">
+        
     </div>
     <script src="app/main.js" type="module"></script>
 </body>
