--- a/20200723_shop_cart/index.html
+++ b/20200723_shop_cart/index.html
@@ -17,7 +17,7 @@
     <footer>
         <h4>footer</h4>
     </footer>
-    <div class="modal close">
+    <div class="modal">
         
     </div>
     <script src="app/main.js" type="module"></script>
