feat: add base category

--- a/20200723_shop_cart/index.html
+++ b/20200723_shop_cart/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>
-        <h3>header</h3>
+        <h3>
+            <div class="categories">
+                
+            </div>
+        </h3>
         <div class="cart_logo">Cart <span class="cart_count"></span></div>
     </header>
     <main>
