feat: add notification(add to cart)

--- a/20200723_shop_cart/index.html
+++ b/20200723_shop_cart/index.html
@@ -10,7 +10,7 @@
     <header>
         <h3>
             <div class="categories">
-                
+
             </div>
         </h3>
         <div class="cart_logo">Cart <span class="cart_count"></span></div>
@@ -20,6 +20,7 @@
     </main>
     <footer>
         <h4>footer</h4>
+        <div class="notification"></div>
     </footer>
     <div class="modal close">
         
