feat: animated notidication

--- a/20200723_shop_cart/index.html
+++ b/20200723_shop_cart/index.html
@@ -20,7 +20,9 @@
     </main>
     <footer>
         <h4>footer</h4>
-        <div class="notification"></div>
+        <div class="notification">
+            <strong>ДОБАВЛЕН В КОРЗИНУ</strong>
+        </div>
     </footer>
     <div class="modal close">
         
